--- a/src/deadline.html
+++ b/src/deadline.html
@@ -1,12 +1,15 @@
 <html>
 	<head>
-
 		<meta charset="utf-8" />
 	</head>
 	<body>
 		<img src="http://learn.tsinghua.edu.cn/img/banner_logo.jpg" />
-		<div id="test">正在载入请稍后</div>
+		<div id="results">正在载入请稍后</div>
+        <script id="results-template" type="text/x-underscore-template">
+            template content
+        </script>
+        <script src="libs/html-domparser.js"></script>
+        <script src="libs/jquery-1.8.1.min.js"></script>
+        <script src="deadline.js"></script>
 	</body>
-	<script type="text/javascript" src="jquery.min.js"></script>
-	<script type="text/javascript" src="deadline.js"></script>
 </html>
