--- a/src/deadline.html
+++ b/src/deadline.html
@@ -1,13 +1,14 @@
+<!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="utf-8" />
+        <style>
+            body { padding: 0; margin: 0; }
+        </style>
 	</head>
 	<body>
-		<img src="http://learn.tsinghua.edu.cn/img/banner_logo.jpg" />
-		<div id="results">正在载入请稍后</div>
-        <script id="results-template" type="text/x-underscore-template">
-            template content
-        </script>
+		<!-- <img src="http://learn.tsinghua.edu.cn/img/banner_logo.jpg" /> -->
+		<div id="results">载入中……</div>
         <script src="libs/html-domparser.js"></script>
         <script src="libs/jquery-1.8.1.min.js"></script>
         <script src="deadline.js"></script>
