Finish filter, still not option panel

--- a/src/handler.html
+++ b/src/handler.html
@@ -7,12 +7,10 @@
         </style>
 	</head>
 	<body>
-		<!-- <img src="http://learn.tsinghua.edu.cn/img/banner_logo.jpg" /> -->
-		<div id="results">载入中……</div>
-        <script src="libs/html-domparser.js"></script>
         <script src="libs/jquery-1.8.1.min.js"></script>
 		<script src="ulti.js"></script>
-        <script src="deadline.js"></script>
-
+		<script src="handler.js"></script>
+		<div id="info"></div>
 	</body>
 </html>
+		
