update version1.3, beautify option panel

--- a/src/options.html
+++ b/src/options.html
@@ -13,17 +13,19 @@
 	<body>
 		<!-- <img src="http://learn.tsinghua.edu.cn/img/banner_logo.jpg" /> -->
 		<div id="title">网络学堂优化器 alpha</div>
-		<div id="balls">与网络学堂同步数据中</div>
-		<div id="progressbar" style="width:50%;"></div>
-		<div id="panel" style="display:none;">
-			<div id="main-table">
-				<table id="course_table">
-				</table>
-			</div>
-			<div id="other">
-				<div class="subtitle">高端设置</div>
-				<button id="clearall">新学期清空</button>
-				<button id="readall">将全部通知设为已读</button>
+		<div id="container">
+			<div id="balls">与网络学堂同步数据中</div>
+			<div id="progressbar"></div>
+			<div id="panel" style="display:none;">
+				<div id="main-table">
+					<table id="course_table" cellpadding="0">
+					</table>
+				</div>
+				<div id="other">
+					<div class="subtitle">高端设置</div>
+					<button id="clearall">新学期清空</button>
+					<button id="readall">将全部通知设为已读</button>
+				</div>
 			</div>
 		</div>
 	</body>
