--- a/src/options.html
+++ b/src/options.html
@@ -22,10 +22,13 @@
 					</table>
 				</div>
 				<div id="other">
-					<div class="subtitle">高端设置</div>
+					<div class="subtitle">高端设置<span style="color:gray;font-size:12px;float:right;">有建议？发邮件至xxr3376@gmail.com</span></div>
 					<button id="clearall">新学期清空</button>
 					<button id="readall">将全部通知设为已读</button>
 				</div>
+			</div>
+			<div id="copyright">
+				&copy; 2012 <a href="mailto:xxr3376@gmail.com">UGeeker</a> BrainLi<br /><a>
 			</div>
 		</div>
 	</body>
