add Responsive design for page

--- a/src/sample.html
+++ b/src/sample.html
@@ -6,10 +6,13 @@
 		<link rel="stylesheet" href="libs/metro/css/modern.css" type="text/css" charset="utf-8">
 		<style>
 			.page{
-				width:1024px;
+				width:980px;
 				margin: auto;
 				background-color: #fff;
 			}
+			@media (min-width: 64em) { 
+				.page { width: 100%; }
+		   	}
 		</style>
 	</head>
 	<body class="modern-ui">
