--- a/src/sample2.html
+++ b/src/sample2.html
@@ -25,19 +25,32 @@
 				<div class="side-block">
 					<div class="title side-title">常用设置</div>
 					<div class="side-block-list">
-						<li>xxx</li>
-						<li>xxx</li>
-						<li>xxx</li>
+						<li><a href="options.html">添加忽略项</a></li>
+						<li>更换用户名密码</li>
+						<li>将全部通知设为已读</li>
+						<li>清空缓存</li>
 					</div>
 				</div>
 			</div>
 			<div class="page-content">
 				<div style="float:right;">切换为宽屏版</div>
+				<div id="status-bar">
+					<div id="deadline-counter" class="status-counter">
+						0
+					</div>
+					<div id="notification-counter" class="status-counter">
+						0
+					</div>
+					<div id="review-counter" class="status-counter">
+						0
+					</div>
+
+				</div>
 				<div class="page-header">
 					早上好~今天也有DDL哦~
 					<div id="main-title" class="title">
 						网络学堂优化器
-						<small>Beta</small>
+						<small>主页</small>
 					</div>
 				</div>
 				<div class="page-region">
@@ -49,8 +62,7 @@
 							</div>
 							<table id="nearby-deadline" class="striped table">
 
-								<tr><th>剩余天数</th><th>截止日期</th><th>作业名称</th><th>课程名称</th><th>作业相关文件</th><th>直接提交作业</th></tr>
-
+								<tr><th>提交状态</th><th>剩余天数</th><th>截止日期</th><th>作业名称</th><th>课程名称</th><th>作业相关文件</th><th>提交</th></tr>
 							</table>
 						</div>
 
@@ -60,7 +72,7 @@
 								<small>Read More >>></small>
 							</div>
 							<table id="unread-notification" class="striped table">
-								<tr><th>状态</th><th>课程名称</th><th>公告标题</th><th>发表日期</th></tr>
+								<tr><th>状态</th><th>公告标题</th><th>课程名称</th><th>发表日期</th></tr>
 							</table>
 						</div>
 					</div>
