--- a/src/exception.html
+++ b/src/exception.html
@@ -4,28 +4,23 @@
 		<meta charset="utf-8" />
 		<script src="libs/html-domparser.js"></script>
 		<script src="libs/jquery-1.8.1.min.js"></script>
+		<script src="libs/js/jquery-ui-1.9.0.custom.min.js"></script>
 		<script src="ulti.js"></script>
-		<script src="options.js"></script>
+		<script language="javascript" type="text/javascript" src="total.js"></script>
+		<script language="javascript" type="text/javascript" src="exception.js"></script>
 		<link href="libs\options.css" rel="stylesheet" type="text/css" />
 		<link rel="stylesheet" href="libs\css\metro.css" />
-		<script src="libs\js\jquery-ui-1.9.0.custom.min.js"></script>
 	</head>
 	<body>
 		<!-- <img src="http://learn.tsinghua.edu.cn/img/banner_logo.jpg" /> -->
-		<div id="title">网络学堂优化器 alpha</div>
+		<div id="title">过滤器</div>
 		<div id="container">
-			<div id="balls">与网络学堂同步数据中</div>
-			<div id="progressbar"></div>
-			<div id="panel" style="display:none;">
+			<div id="panel">
 				<div id="main-table">
 					<table id="course_table" cellpadding="0">
 					</table>
 				</div>
-				<div id="other">
-					<div class="subtitle">高端设置<span style="color:gray;font-size:12px;float:right;">有建议？发邮件至xxr3376@gmail.com</span></div>
-					<button id="clearall">新学期清空</button>
-					<button id="readall">将全部通知设为已读</button>
-				</div>
+				<button id="clearall">清空所有项目</button>
 			</div>
 			<div id="copyright">
 				&copy; 2012 <a href="mailto:xxr3376@gmail.com">UGeeker</a> BrainLi<br /><a>
