--- a/src/sample2.html
+++ b/src/sample2.html
@@ -61,10 +61,23 @@
 								Nearby Deadline
 								<small>Read More >>></small>
 							</div>
-							<table id="nearby-deadline" class="striped table">
-
 								<tr><th>状态</th><th>提交状态</th><th>剩余天数</th><th>截止日期</th><th>作业名称</th><th>课程名称</th><th>作业相关文件</th><th>提交</th><th>批阅</td></tr>
-							</table>
+							<section>
+							<ol id="nearby-deadline" class="homework-list">
+								<li class="homework-item">
+									<a class="state-flag readed" data-args="d,486643,stared">已读</a>
+									<span class="submit-state">已经提交</span>
+									<span class="last-day">5</span>
+									<span class="due-date">2013.03.08</span>
+									<a class="hw-name hw-jump" target="_blank" data-args="d,486643,readed" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_detail.jsp?id=486643&amp;course_id=97913">课前十问</a>
+									<a target="_blank" class="course-name" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_brw.jsp?course_id=97913">毛泽东思想和中国特色社会主义理论体系概论</a>
+									<a href="#" class="hw-file">none</a>
+									<a class="hw-handin" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_submit.jsp?id=486643&amp;course_id=97913">提交</a>
+									<span class="hw-review-none">未批阅</span>
+								</li>
+							</ol>
+							</section>
+
 						</div>
 
 						<div class="main-block" >
@@ -72,10 +85,22 @@
 								What's News	
 								<small>Read More >>></small>
 							</div>
-							<table id="unread-notification" class="striped table">
-								<tr><th>状态</th><th>公告标题</th><th>课程名称</th><th>发表日期</th></tr>
-							</table>
+							<tr><th>状态</th><th>公告标题</th><th>课程名称</th><th>发表日期</th></tr>
+							<section>
+							<ol id="unread-notification" class="noti-list">
+								<li class="noti-item">
+									<a class="state-flag stared" data-args="n,1397728,readed">加星</a>
+									<a class="noti-name" target="_blank" href="http://learn.tsinghua.edu.cn/MultiLanguage/public/bbs/note_reply.jsp?bbs_type=课程公告&amp;id=1397728&amp;course_id=99200">course&nbsp;contact&nbsp;info.</a>
+									<a target="_blank" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_brw.jsp?course_id=99200">机器学习概论</a>
+									<span class="publish-date">2013.03.01</span>
+								</li>
+							</ol>
+							</section>
+
 						</div>
+								
+						</div>
+
 					</div>
 				</div>
 			</div>
