wip message pane & refactored folder pane

--- a/design/index.html
+++ b/design/index.html
@@ -6,9 +6,9 @@
   <link rel="stylesheet" href="css/main.css" />
 </head>
 <body>
-  <div class="pane-folders">
-    <ul class="folders">
-      <li class="folders-heading">
+  <div class="pane-folder">
+    <ul class="folder-list">
+      <li class="folder-heading">
         <i class="icon-inbox"></i>
         本学期课程
       </li>
@@ -37,8 +37,8 @@
         </a>
       </li>
     </ul>
-    <ul class="folders">
-      <li class="folders-heading">
+    <ul class="folder-list">
+      <li class="folder-heading">
         <i class="icon-inbox"></i>
         本学期课程
       </li>
@@ -67,8 +67,8 @@
         </a>
       </li>
     </ul>
-    <ul class="folders">
-      <li class="folders-heading">
+    <ul class="folder-list">
+      <li class="folder-heading">
         <i class="icon-inbox"></i>
         本学期课程
       </li>
@@ -97,8 +97,8 @@
         </a>
       </li>
     </ul>
-    <ul class="folders">
-      <li class="folders-heading">
+    <ul class="folder-list">
+      <li class="folder-heading">
         <i class="icon-inbox"></i>
         本学期课程
       </li>
@@ -127,8 +127,8 @@
         </a>
       </li>
     </ul>
-    <ul class="folders">
-      <li class="folders-heading">
+    <ul class="folder-list">
+      <li class="folder-heading">
         <i class="icon-inbox"></i>
         本学期课程
       </li>
@@ -157,8 +157,8 @@
         </a>
       </li>
     </ul>
-    <ul class="folders">
-      <li class="folders-heading">
+    <ul class="folder-list">
+      <li class="folder-heading">
         <i class="icon-inbox"></i>
         本学期课程
       </li>
@@ -187,8 +187,8 @@
         </a>
       </li>
     </ul>
-    <ul class="folders">
-      <li class="folders-heading">
+    <ul class="folder-list">
+      <li class="folder-heading">
         <i class="icon-inbox"></i>
         设置
       </li>
@@ -198,7 +198,24 @@
     </ul>
   </div>
 
-  <div class="pane-messages"></div>
+  <div class="pane-message">
+    <div class="category-heading">Nearby Deadline</div>
+    <ol id="nearby-deadline" class="message-list">
+      <li class="message homework">
+        <a class="name" target="_blank" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_detail.jsp?id=486643&amp;course_id=97913">课前十问</a>
+        <a class="read-state read" href="#">已读</a>
+        <span class="submit-state submitted">已经提交</span>
+        <span class="days-left">5</span>
+        <span class="due-date">2013.03.08</span>
+        <a target="_blank" class="course-name" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_brw.jsp?course_id=97913">毛泽东思想和中国特色社会主义理论体系概论</a>
+        <a class="attachment-file" href="#">none</a>
+        <a class="handin-link" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_submit.jsp?id=486643&amp;course_id=97913">提交</a>
+        <span class="review-state">未批阅</span>
+      </li>
+    </ol>
+
+    <div class="category-heading">What's News</div>
+  </div>
 
 </body>
 </html>
