--- a/design/index.html
+++ b/design/index.html
@@ -201,16 +201,16 @@
   <div class="pane-message">
     <div class="category-heading">Nearby Deadline</div>
     <ol id="nearby-deadline" class="message-list">
-      <li class="message homework">
-        <a class="name" target="_blank" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_detail.jsp?id=486643&amp;course_id=97913">课前十问</a>
-        <a class="read-state read" href="#">已读</a>
-        <span class="submit-state submitted">已经提交</span>
+      <li class="message homework is-unread is-submitted is-reviewed is-stared">
+        <a class="title" target="_blank" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_detail.jsp?id=486643&amp;course_id=97913">课前十问课前十问课前十问课前十问课前十问课前十问课前十问课前十问课前十问课前十问课前十问课前十问课前十问课前十问课前十问课前十问课前十问课前十问</a>
         <span class="days-left">5</span>
-        <span class="due-date">2013.03.08</span>
-        <a target="_blank" class="course-name" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_brw.jsp?course_id=97913">毛泽东思想和中国特色社会主义理论体系概论</a>
-        <a class="attachment-file" href="#">none</a>
-        <a class="handin-link" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_submit.jsp?id=486643&amp;course_id=97913">提交</a>
-        <span class="review-state">未批阅</span>
+        <span class="description">2013.03.08 - 已批阅</span>
+        <div class="toolbar">
+          <a class="handin-link" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_submit.jsp?id=486643&amp;course_id=97913">已经提交</a>
+          <a class="add-star" href="#">加星</a>
+          <a class="attachment-file" href="#"><i class="icon-paper-clip"></i>abcd.zipabcd.zipabcd.zipabcd.zipabcd.zipabcd.zip</a>
+          <a class="course-name" target="_blank" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_brw.jsp?course_id=97913">毛泽东思想和中国特色社会主义理论体系概论</a>
+        </div>
       </li>
     </ol>
 
