--- a/design/index.html
+++ b/design/index.html
@@ -16,24 +16,28 @@
         <a href="#">
           <i class="icon-book"></i>
           计算机系统结构
+          <span class="unread-count">6</span>
         </a>
       </li>
       <li class="folder">
         <a href="#">
           <i class="icon-book"></i>
           密码学及安全计算
+          <span class="unread-count">6</span>
         </a>
       </li>
       <li class="folder">
         <a href="#">
           <i class="icon-book"></i>
           存储技术基础
+          <span class="unread-count">6</span>
         </a>
       </li>
       <li class="folder">
         <a href="#">
           <i class="icon-book"></i>
           长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长
+          <span class="unread-count">6</span>
         </a>
       </li>
     </ul>
@@ -202,8 +206,11 @@
     <div class="category-heading">Nearby Deadline</div>
     <ol id="nearby-deadline" class="message-list">
       <li class="message homework is-unread is-submitted is-reviewed is-stared">
-        <a class="title" target="_blank" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_detail.jsp?id=486643&amp;course_id=97913">课前十问课前十问课前十问课前十问课前十问课前十问课前十问课前十问课前十问课前十问课前十问课前十问课前十问课前十问课前十问课前十问课前十问课前十问</a>
-        <span class="days-left">5</span>
+        <a class="title" target="_blank" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_detail.jsp?id=486643&amp;course_id=97913">
+          <span class="days-left">365</span>
+          课前十问课前十问课前十问课前十问课前十问课前十问课前十问课前十问课前十问课前十问课前十问课前十问课前十问课前十问课前十问课前十问课前十问课前十问
+        </a>
+        
         <span class="description">2013.03.08 - 已批阅</span>
         <div class="toolbar">
           <a class="handin-link" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_submit.jsp?id=486643&amp;course_id=97913">已经提交</a>
@@ -215,6 +222,78 @@
     </ol>
 
     <div class="category-heading">What's News</div>
+    <ol id="category-heading" class="message-list">
+      <li class="message notification is-unread">
+        <a class="title" target="_blank" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_detail.jsp?id=486643&amp;course_id=97913">教材信息</a>
+        <span class="description">2013.03.08</span>
+        <div class="toolbar">
+          <a class="handin-link" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_submit.jsp?id=486643&amp;course_id=97913">已经提交</a>
+          <a class="add-star" href="#">加星</a>
+          <a class="attachment-file" href="#"><i class="icon-paper-clip"></i>abcd.zipabcd.zipabcd.zipabcd.zipabcd.zipabcd.zip</a>
+          <a class="course-name" target="_blank" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_brw.jsp?course_id=97913">毛泽东思想和中国特色社会主义理论体系概论</a>
+        </div>
+      </li>
+      <li class="message notification is-unread">
+        <a class="title" target="_blank" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_detail.jsp?id=486643&amp;course_id=97913">教材信息</a>
+        <span class="description">2013.03.08</span>
+        <div class="toolbar">
+          <a class="handin-link" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_submit.jsp?id=486643&amp;course_id=97913">已经提交</a>
+          <a class="add-star" href="#">加星</a>
+          <a class="attachment-file" href="#"><i class="icon-paper-clip"></i>abcd.zipabcd.zipabcd.zipabcd.zipabcd.zipabcd.zip</a>
+          <a class="course-name" target="_blank" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_brw.jsp?course_id=97913">毛泽东思想和中国特色社会主义理论体系概论</a>
+        </div>
+      </li>
+      <li class="message notification is-unread">
+        <a class="title" target="_blank" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_detail.jsp?id=486643&amp;course_id=97913">教材信息</a>
+        <span class="description">2013.03.08</span>
+        <div class="toolbar">
+          <a class="handin-link" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_submit.jsp?id=486643&amp;course_id=97913">已经提交</a>
+          <a class="add-star" href="#">加星</a>
+          <a class="attachment-file" href="#"><i class="icon-paper-clip"></i>abcd.zipabcd.zipabcd.zipabcd.zipabcd.zipabcd.zip</a>
+          <a class="course-name" target="_blank" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_brw.jsp?course_id=97913">毛泽东思想和中国特色社会主义理论体系概论</a>
+        </div>
+      </li>
+      <li class="message notification is-unread">
+        <a class="title" target="_blank" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_detail.jsp?id=486643&amp;course_id=97913">教材信息</a>
+        <span class="description">2013.03.08</span>
+        <div class="toolbar">
+          <a class="handin-link" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_submit.jsp?id=486643&amp;course_id=97913">已经提交</a>
+          <a class="add-star" href="#">加星</a>
+          <a class="attachment-file" href="#"><i class="icon-paper-clip"></i>abcd.zipabcd.zipabcd.zipabcd.zipabcd.zipabcd.zip</a>
+          <a class="course-name" target="_blank" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_brw.jsp?course_id=97913">毛泽东思想和中国特色社会主义理论体系概论</a>
+        </div>
+      </li>
+      <li class="message notification is-unread">
+        <a class="title" target="_blank" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_detail.jsp?id=486643&amp;course_id=97913">教材信息</a>
+        <span class="description">2013.03.08</span>
+        <div class="toolbar">
+          <a class="handin-link" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_submit.jsp?id=486643&amp;course_id=97913">已经提交</a>
+          <a class="add-star" href="#">加星</a>
+          <a class="attachment-file" href="#"><i class="icon-paper-clip"></i>abcd.zipabcd.zipabcd.zipabcd.zipabcd.zipabcd.zip</a>
+          <a class="course-name" target="_blank" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_brw.jsp?course_id=97913">毛泽东思想和中国特色社会主义理论体系概论</a>
+        </div>
+      </li>
+      <li class="message notification is-unread">
+        <a class="title" target="_blank" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_detail.jsp?id=486643&amp;course_id=97913">教材信息</a>
+        <span class="description">2013.03.08</span>
+        <div class="toolbar">
+          <a class="handin-link" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_submit.jsp?id=486643&amp;course_id=97913">已经提交</a>
+          <a class="add-star" href="#">加星</a>
+          <a class="attachment-file" href="#"><i class="icon-paper-clip"></i>abcd.zipabcd.zipabcd.zipabcd.zipabcd.zipabcd.zip</a>
+          <a class="course-name" target="_blank" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_brw.jsp?course_id=97913">毛泽东思想和中国特色社会主义理论体系概论</a>
+        </div>
+      </li>
+      <li class="message notification is-unread">
+        <a class="title" target="_blank" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_detail.jsp?id=486643&amp;course_id=97913">教材信息</a>
+        <span class="description">2013.03.08</span>
+        <div class="toolbar">
+          <a class="handin-link" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_submit.jsp?id=486643&amp;course_id=97913">已经提交</a>
+          <a class="add-star" href="#">加星</a>
+          <a class="attachment-file" href="#"><i class="icon-paper-clip"></i>abcd.zipabcd.zipabcd.zipabcd.zipabcd.zipabcd.zip</a>
+          <a class="course-name" target="_blank" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_brw.jsp?course_id=97913">毛泽东思想和中国特色社会主义理论体系概论</a>
+        </div>
+      </li>
+    </ol>
   </div>
 
 </body>
