--- a/design/index.html
+++ b/design/index.html
@@ -304,12 +304,14 @@
           <a class="handin-link" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_submit.jsp?id=486643&amp;course_id=97913">已经提交</a>
           <a class="add-star" href="#">加星</a>
           <a class="attachment-file" href="#"><i class="icon-paper-clip"></i>abcd.zipabcd.zipabcd.zipabcd.zipabcd.zipabcd.zip</a>
-          <a class="course-name" target="_blank" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_brw.jsp?course_id=97913">毛泽东思想和中国特色社会主义理论体系概论</a>
+          <a class="course-name" target="content-frame" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_brw.jsp?course_id=97913">毛泽东思想和中国特色社会主义理论体系概论</a>
         </div>
       </li>
     </ol>
   </div>
-
+  <div class="pane-content">
+    <iframe src="http://www.baidu.com" name="content-frame" frameborder="0" width="100%" height="100%"></iframe>
+  </div>
 </body>
 </html>
 
