--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 		<script src="libs/html-domparser.js"></script>
 		<script src="libs/jquery-1.8.1.min.js"></script>
 		<script src="ulti.js"></script>
-		<script language="javascript" type="text/javascript" src="total.js"></script>
+		<script language="javascript" type="text/javascript" src="total.js"> </script>
 	</head>
 	<body>
 		<div class="pane-folder">
@@ -16,7 +16,6 @@
 				<i class="icon-inbox"></i>
 				本学期课程
 				</li>
-
 			</ul>
 
 			<ul class="folder-list">
@@ -24,9 +23,11 @@
 				<i class="icon-inbox"></i>
 				设置
 				</li>
-				<li class="folder"><a href="#">添加忽略项</a></li>
-				<li class="folder"><a href="#">将全部设为已读</a></li>
-				<li class="folder"><a href="#">更换用户名密码</a></li>
+				<li class="folder"><a href="exception.html" target="content-frame">添加忽略项</a></li>
+				<li class="folder"><a href="#" id="option-set-all-read">将全部设为已读</a></li>
+				<li class="folder"><a href="#" id="option-force-reload-all">强制刷新</a></li>
+				<li class="folder"><a href="#" id="option-clear-cache">清空缓存</a></li>
+				<li class="folder"><a href="#" >更换用户名密码</a></li>
 			</ul>
 		</div>
 
@@ -35,14 +36,14 @@
 			<ol id="nearby-deadline" class="message-list">
 
 			</ol>
-			<div class="category-heading">What's News</div>
+			<div class="category-heading">What's New</div>
 			<ol id="category-heading" class="message-list">
 
 			</ol>
 
 			</div>
 			<div class="pane-content">
-				<iframe src="about:blank" name="content-frame" frameborder="0" width="100%" height="100%"></iframe>
+				<iframe src="welcome.html" name="content-frame" frameborder="0" width="100%" height="100%"></iframe>
 			</div>
 		</body>
 	</html>
