add simple user token manage

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
 				<li class="folder"><a href="#" id="option-set-all-read">将全部设为已读</a></li>
 				<li class="folder"><a href="#" id="option-force-reload-all">强制刷新</a></li>
 				<li class="folder"><a href="#" id="option-clear-cache">清空缓存</a></li>
-				<li class="folder"><a href="#" >更换用户名密码</a></li>
+				<li class="folder"><a href="updateToken.html" target="content-frame">更换用户名密码</a></li>
 			</ul>
 		</div>
 
