--- a/design/index.html
+++ b/design/index.html
@@ -9,202 +9,20 @@
   <div class="pane-folder">
     <ul class="folder-list">
       <li class="folder-heading">
-        <i class="icon-inbox"></i>
-        本学期课程
+        <i class="icon-inbox"></i> 本学期课程
       </li>
       <li class="folder">
         <a href="#">
-          <i class="icon-book"></i>
-          计算机系统结构
-          <span class="unread-count">6</span>
+          <i class="icon-book"></i> 计算机系统结构 <span class="unread-count">6</span>
         </a>
       </li>
-      <li class="folder">
-        <a href="#">
-          <i class="icon-book"></i>
-          密码学及安全计算
-          <span class="unread-count">6</span>
-        </a>
-      </li>
-      <li class="folder">
-        <a href="#">
-          <i class="icon-book"></i>
-          存储技术基础
-          <span class="unread-count">6</span>
-        </a>
-      </li>
-      <li class="folder">
-        <a href="#">
-          <i class="icon-book"></i>
-          长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长
-          <span class="unread-count">60</span>
-        </a>
-      </li>
-    </ul>
-    <ul class="folder-list">
-      <li class="folder-heading">
-        <i class="icon-inbox"></i>
-        本学期课程
-      </li>
-      <li class="folder">
-        <a href="#">
-          <i class="icon-book"></i>
-          计算机系统结构
-        </a>
-      </li>
-      <li class="folder">
-        <a href="#">
-          <i class="icon-book"></i>
-          密码学及安全计算
-        </a>
-      </li>
-      <li class="folder">
-        <a href="#">
-          <i class="icon-book"></i>
-          存储技术基础
-        </a>
-      </li>
-      <li class="folder">
-        <a href="#">
-          <i class="icon-book"></i>
-          长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长
-        </a>
-      </li>
-    </ul>
-    <ul class="folder-list">
-      <li class="folder-heading">
-        <i class="icon-inbox"></i>
-        本学期课程
-      </li>
-      <li class="folder">
-        <a href="#">
-          <i class="icon-book"></i>
-          计算机系统结构
-        </a>
-      </li>
-      <li class="folder">
-        <a href="#">
-          <i class="icon-book"></i>
-          密码学及安全计算
-        </a>
-      </li>
-      <li class="folder">
-        <a href="#">
-          <i class="icon-book"></i>
-          存储技术基础
-        </a>
-      </li>
-      <li class="folder">
-        <a href="#">
-          <i class="icon-book"></i>
-          长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长
-        </a>
-      </li>
-    </ul>
-    <ul class="folder-list">
-      <li class="folder-heading">
-        <i class="icon-inbox"></i>
-        本学期课程
-      </li>
-      <li class="folder">
-        <a href="#">
-          <i class="icon-book"></i>
-          计算机系统结构
-        </a>
-      </li>
-      <li class="folder">
-        <a href="#">
-          <i class="icon-book"></i>
-          密码学及安全计算
-        </a>
-      </li>
-      <li class="folder">
-        <a href="#">
-          <i class="icon-book"></i>
-          存储技术基础
-        </a>
-      </li>
-      <li class="folder">
-        <a href="#">
-          <i class="icon-book"></i>
-          长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长
-        </a>
-      </li>
-    </ul>
-    <ul class="folder-list">
-      <li class="folder-heading">
-        <i class="icon-inbox"></i>
-        本学期课程
-      </li>
-      <li class="folder">
-        <a href="#">
-          <i class="icon-book"></i>
-          计算机系统结构
-        </a>
-      </li>
-      <li class="folder">
-        <a href="#">
-          <i class="icon-book"></i>
-          密码学及安全计算
-        </a>
-      </li>
-      <li class="folder">
-        <a href="#">
-          <i class="icon-book"></i>
-          存储技术基础
-        </a>
-      </li>
-      <li class="folder">
-        <a href="#">
-          <i class="icon-book"></i>
-          长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长
-        </a>
-      </li>
-    </ul>
-    <ul class="folder-list">
-      <li class="folder-heading">
-        <i class="icon-inbox"></i>
-        本学期课程
-      </li>
-      <li class="folder">
-        <a href="#">
-          <i class="icon-book"></i>
-          计算机系统结构
-        </a>
-      </li>
-      <li class="folder">
-        <a href="#">
-          <i class="icon-book"></i>
-          密码学及安全计算
-        </a>
-      </li>
-      <li class="folder">
-        <a href="#">
-          <i class="icon-book"></i>
-          存储技术基础
-        </a>
-      </li>
-      <li class="folder">
-        <a href="#">
-          <i class="icon-book"></i>
-          长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长长
-        </a>
-      </li>
-    </ul>
-    <ul class="folder-list">
-      <li class="folder-heading">
-        <i class="icon-inbox"></i>
-        设置
-      </li>
-      <li class="folder"><a href="#">添加忽略项</a></li>
-      <li class="folder"><a href="#">将全部设为已读</a></li>
-      <li class="folder"><a href="#">更换用户名密码</a></li>
     </ul>
   </div>
 
   <div class="pane-message">
+
     <div class="category-heading">Nearby Deadline</div>
-    <ol id="nearby-deadline" class="message-list">
+    <ol class="message-list">
       <li class="message homework is-unread is-submitted is-reviewed is-stared is-important">
         <a class="title" target="_blank" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_detail.jsp?id=486643&amp;course_id=97913">
           <span class="days-left">365</span>
@@ -219,99 +37,31 @@
           <a class="course-name" target="_blank" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_brw.jsp?course_id=97913">毛泽东思想和中国特色社会主义理论体系概论</a>
         </div>
       </li>
-      <li class="message homework is-unread is-submitted is-reviewed is-stared">
-        <a class="title" target="_blank" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_detail.jsp?id=486643&amp;course_id=97913">
-          <span class="days-left">365</span>
-          课前十问课前十问课前十问课前十问课前十问课前十问课前十问课前十问课前十问课前十问课前十问课前十问课前十问课前十问课前十问课前十问课前十问课前十问
-        </a>
-        
-        <span class="description">2013.03.08 - 已批阅</span>
-        <div class="toolbar">
-          <a class="handin-link" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_submit.jsp?id=486643&amp;course_id=97913">已经提交</a>
-          <a class="add-star" href="#">加星</a>
-          <a class="attachment-file" href="#"><i class="icon-paper-clip"></i>abcd.zipabcd.zipabcd.zipabcd.zipabcd.zipabcd.zip</a>
-          <a class="course-name" target="_blank" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_brw.jsp?course_id=97913">毛泽东思想和中国特色社会主义理论体系概论</a>
-        </div>
-      </li>
     </ol>
 
-    <div class="category-heading">What's News</div>
-    <ol id="category-heading" class="message-list">
-      <li class="message notification is-unread">
-        <a class="title" target="_blank" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_detail.jsp?id=486643&amp;course_id=97913">教材信息</a>
-        <span class="description">2013.03.08</span>
-        <div class="toolbar">
-          <a class="handin-link" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_submit.jsp?id=486643&amp;course_id=97913">已经提交</a>
-          <a class="add-star" href="#">加星</a>
-          <a class="attachment-file" href="#"><i class="icon-paper-clip"></i>abcd.zipabcd.zipabcd.zipabcd.zipabcd.zipabcd.zip</a>
-          <a class="course-name" target="_blank" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_brw.jsp?course_id=97913">毛泽东思想和中国特色社会主义理论体系概论</a>
-        </div>
-      </li>
-      <li class="message notification is-unread">
-        <a class="title" target="_blank" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_detail.jsp?id=486643&amp;course_id=97913">教材信息</a>
-        <span class="description">2013.03.08</span>
-        <div class="toolbar">
-          <a class="handin-link" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_submit.jsp?id=486643&amp;course_id=97913">已经提交</a>
-          <a class="add-star" href="#">加星</a>
-          <a class="attachment-file" href="#"><i class="icon-paper-clip"></i>abcd.zipabcd.zipabcd.zipabcd.zipabcd.zipabcd.zip</a>
-          <a class="course-name" target="_blank" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_brw.jsp?course_id=97913">毛泽东思想和中国特色社会主义理论体系概论</a>
-        </div>
-      </li>
-      <li class="message notification is-unread">
-        <a class="title" target="_blank" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_detail.jsp?id=486643&amp;course_id=97913">教材信息</a>
-        <span class="description">2013.03.08</span>
-        <div class="toolbar">
-          <a class="handin-link" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_submit.jsp?id=486643&amp;course_id=97913">已经提交</a>
-          <a class="add-star" href="#">加星</a>
-          <a class="attachment-file" href="#"><i class="icon-paper-clip"></i>abcd.zipabcd.zipabcd.zipabcd.zipabcd.zipabcd.zip</a>
-          <a class="course-name" target="_blank" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_brw.jsp?course_id=97913">毛泽东思想和中国特色社会主义理论体系概论</a>
-        </div>
-      </li>
-      <li class="message notification is-unread">
-        <a class="title" target="_blank" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_detail.jsp?id=486643&amp;course_id=97913">教材信息</a>
-        <span class="description">2013.03.08</span>
-        <div class="toolbar">
-          <a class="handin-link" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_submit.jsp?id=486643&amp;course_id=97913">已经提交</a>
-          <a class="add-star" href="#">加星</a>
-          <a class="attachment-file" href="#"><i class="icon-paper-clip"></i>abcd.zipabcd.zipabcd.zipabcd.zipabcd.zipabcd.zip</a>
-          <a class="course-name" target="_blank" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_brw.jsp?course_id=97913">毛泽东思想和中国特色社会主义理论体系概论</a>
-        </div>
-      </li>
-      <li class="message notification is-unread">
-        <a class="title" target="_blank" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_detail.jsp?id=486643&amp;course_id=97913">教材信息</a>
-        <span class="description">2013.03.08</span>
-        <div class="toolbar">
-          <a class="handin-link" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_submit.jsp?id=486643&amp;course_id=97913">已经提交</a>
-          <a class="add-star" href="#">加星</a>
-          <a class="attachment-file" href="#"><i class="icon-paper-clip"></i>abcd.zipabcd.zipabcd.zipabcd.zipabcd.zipabcd.zip</a>
-          <a class="course-name" target="_blank" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_brw.jsp?course_id=97913">毛泽东思想和中国特色社会主义理论体系概论</a>
-        </div>
-      </li>
-      <li class="message notification is-unread">
-        <a class="title" target="_blank" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_detail.jsp?id=486643&amp;course_id=97913">教材信息</a>
-        <span class="description">2013.03.08</span>
-        <div class="toolbar">
-          <a class="handin-link" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_submit.jsp?id=486643&amp;course_id=97913">已经提交</a>
-          <a class="add-star" href="#">加星</a>
-          <a class="attachment-file" href="#"><i class="icon-paper-clip"></i>abcd.zipabcd.zipabcd.zipabcd.zipabcd.zipabcd.zip</a>
-          <a class="course-name" target="_blank" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_brw.jsp?course_id=97913">毛泽东思想和中国特色社会主义理论体系概论</a>
-        </div>
-      </li>
-      <li class="message notification is-unread">
-        <a class="title" target="_blank" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_detail.jsp?id=486643&amp;course_id=97913">教材信息</a>
-        <span class="description">2013.03.08</span>
-        <div class="toolbar">
-          <a class="handin-link" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_submit.jsp?id=486643&amp;course_id=97913">已经提交</a>
-          <a class="add-star" href="#">加星</a>
-          <a class="attachment-file" href="#"><i class="icon-paper-clip"></i>abcd.zipabcd.zipabcd.zipabcd.zipabcd.zipabcd.zip</a>
-          <a class="course-name" target="content-frame" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_brw.jsp?course_id=97913">毛泽东思想和中国特色社会主义理论体系概论</a>
-        </div>
-      </li>
-    </ol>
   </div>
+
   <div class="pane-content">
-    <iframe src="http://www.baidu.com" name="content-frame" frameborder="0" width="100%" height="100%"></iframe>
+    <iframe src="about:blank" name="content-frame" frameborder="0" width="100%" height="100%"></iframe>
   </div>
+
+  <div id="my-modal" class="modal">
+    Hello World
+  </div>
+
+  <script src="js/jquery-1.9.1.min.js"></script>
+  <script src="js/modal.js"></script>
+
+  <script>
+    $('#my-modal').modal({
+      title: 'Hello World',
+      closable: false
+    });
+    setTimeout(function() {
+      $('#my-modal').modal('show');
+    }, 1000)
+  </script>
+
 </body>
 </html>
 
