--- a/design/index.html
+++ b/design/index.html
@@ -46,7 +46,17 @@
   </div>
 
   <div id="my-modal" class="modal">
-    Hello World
+    <form class="form-styled">
+      <div class="field">
+        <input type="text" placeholder="用户名" />
+      </div>
+      <div class="field">
+        <input type="password" placeholder="密码" />
+      </div>
+      <div class="field">
+        <input type="submit" class="btn" value="登录" />
+      </div>
+    </form>
   </div>
 
   <script src="js/jquery-1.9.1.min.js"></script>
