--- a/design/index.html
+++ b/design/index.html
@@ -13,8 +13,49 @@
       </li>
       <li class="folder">
         <a href="#">
-          <i class="icon-book"></i> 计算机系统结构 <span class="unread-count">6</span>
+          <i class="icon-book"></i>
+          计算机系统结构
+          <span class="unread-count">6</span>
         </a>
+
+        <ul class="subfolder">
+          <li>
+            <a href="#">
+              <i class="icon-file"></i>
+              课程公告
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="icon-file"></i>
+              课程公告
+            </a>
+          </li>
+        </ul>
+
+      </li>
+      <li class="folder">
+        <a href="#">
+          <i class="icon-book"></i>
+          计算机系统结构
+          <span class="unread-count">6</span>
+        </a>
+
+        <ul class="subfolder">
+          <li>
+            <a href="#">
+              <i class="icon-file"></i>
+              课程公告
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="icon-file"></i>
+              课程公告
+            </a>
+          </li>
+        </ul>
+
       </li>
     </ul>
   </div>
@@ -61,14 +102,15 @@
 
   <script src="js/jquery-1.9.1.min.js"></script>
   <script src="js/modal.js"></script>
+  <script src="js/menu.js"></script>
 
   <script>
     $('#my-modal').modal({
-      title: 'Hello World',
+      title: '<i class="icon-signin"></i> 登录',
       closable: false
     });
     setTimeout(function() {
-      $('#my-modal').modal('show');
+      // $('#my-modal').modal('show');
     }, 1000)
   </script>
 
