--- a/design/index.html
+++ b/design/index.html
@@ -86,7 +86,7 @@
     <iframe src="about:blank" name="content-frame" frameborder="0" width="100%" height="100%"></iframe>
   </div>
 
-  <div id="my-modal" class="modal">
+  <div id="my-modal">
     <form class="form-styled">
       <div class="field">
         <input type="text" placeholder="用户名" />
@@ -110,7 +110,7 @@
       closable: false
     });
     setTimeout(function() {
-      // $('#my-modal').modal('show');
+      $('#my-modal').modal('show');
     }, 1000)
   </script>
 
