--- a/src/index.html
+++ b/src/index.html
@@ -23,11 +23,11 @@
 				<i class="icon-inbox"></i>
 				设置
 				</li>
-				<li class="folder"><a href="exception.html" target="content-frame">添加忽略项</a></li>
-				<li class="folder"><a href="#" id="option-set-all-read">将全部设为已读</a></li>
-				<li class="folder"><a href="#" id="option-force-reload-all">强制刷新</a></li>
-				<li class="folder"><a href="#" id="option-clear-cache">清空缓存</a></li>
-				<li class="folder"><a href="updateToken.html" target="content-frame">更换用户名密码</a></li>
+				<li class="folder"><a href="exception.html" target="content-frame"><i class="icon-cog"></i> 添加忽略项</a></li>
+				<li class="folder"><a href="#" id="option-set-all-read"><i class="icon-envelope"></i> 将全部设为已读</a></li>
+				<li class="folder"><a href="#" id="option-force-reload-all"><i class="icon-refresh"></i> 强制刷新</a></li>
+				<li class="folder"><a href="#" id="option-clear-cache"><i class="icon-trash"></i> 清空缓存</a></li>
+        <li class="folder"><a href="updateToken.html" target="content-frame"><i class="icon-user"></i> 更换用户名密码</a></li>
 			</ul>
 		</div>
 
