--- a/design/index.html
+++ b/design/index.html
@@ -110,8 +110,11 @@
       closable: false
     });
     setTimeout(function() {
-      $('#my-modal').modal('show');
+      // $('#my-modal').modal('show');
     }, 1000)
+    setInterval(function() {
+      $('body').toggleClass('is-loading');
+    }, 1000);
   </script>
 
 </body>
