--- a/design/index.html
+++ b/design/index.html
@@ -110,7 +110,7 @@
       closable: false
     });
     setTimeout(function() {
-      // $('#my-modal').modal('show');
+      $('#my-modal').modal('show');
     }, 1000)
     setInterval(function() {
       $('body').toggleClass('is-loading');
