--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,10 @@
 		<title>Learn Helper</title>
 		<link rel="stylesheet" href="css/main.css" />
 		<script src="libs/html-domparser.js"></script>
-		<script src="libs/jquery-1.8.1.min.js"></script>
+		<!-- <script src="libs/jquery-1.8.1.min.js"></script> -->
+		<script src="js/jquery-1.9.1.min.js"></script>
+		<script src="js/modal.js"></script>
+		<script src="js/menu.js"></script>
 		<script src="ulti.js"></script>
 		<script language="javascript" type="text/javascript" src="total.js"> </script>
 	</head>
