--- a/design/index.html
+++ b/design/index.html
@@ -110,10 +110,10 @@
       closable: false
     });
     setTimeout(function() {
-      $('#my-modal').modal('show');
+      // $('#my-modal').modal('show');
     }, 1000)
     setInterval(function() {
-      $('body').toggleClass('is-loading');
+      // $('body').toggleClass('is-loading');
     }, 1000);
   </script>
 
