--- a/src/index.html
+++ b/src/index.html
@@ -48,6 +48,21 @@
 			<div class="pane-content">
 				<iframe src="welcome.html" name="content-frame" frameborder="0" width="100%" height="100%"></iframe>
 			</div>
+
+			<div id="my-modal">
+				<form class="form-styled">
+					<div class="field">
+						<input type="text" placeholder="用户名" />
+					</div>
+					<div class="field">
+						<input type="password" placeholder="密码" />
+					</div>
+					<div class="field">
+						<input type="submit" class="btn" value="登录" />
+					</div>
+				</form>
+			</div>
+
 		</body>
 	</html>
 
