days-left -> tag

--- a/design/index.html
+++ b/design/index.html
@@ -66,7 +66,7 @@
     <ol class="message-list">
       <li class="message homework is-unread is-submitted is-reviewed is-stared is-important">
         <a class="title" target="_blank" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_detail.jsp?id=486643&amp;course_id=97913">
-          <span class="days-left">365</span>
+          <span class="tag"><i class="icon-pencil"></i> 365</span>
           课前十问课前十问课前十问课前十问课前十问课前十问课前十问课前十问课前十问课前十问课前十问课前十问课前十问课前十问课前十问课前十问课前十问课前十问
         </a>
         
@@ -110,10 +110,10 @@
       closable: false
     });
     setTimeout(function() {
-      // $('#my-modal').modal('show');
+      $('#my-modal').modal('show');
     }, 1000)
     setInterval(function() {
-      // $('body').toggleClass('is-loading');
+      $('body').toggleClass('is-loading');
     }, 1000);
   </script>
 
