--- a/src/index.html
+++ b/src/index.html
@@ -23,8 +23,7 @@
 
 			<ul class="folder-list">
 				<li class="folder-heading">
-				<i class="icon-inbox"></i>
-				设置
+				<i class="icon-wrench"></i> 设置
 				</li>
 				<li class="folder"><a href="exception.html" target="content-frame"><i class="icon-cog"></i> 添加忽略项</a></li>
 				<li class="folder"><a href="#" id="option-set-all-read"><i class="icon-envelope"></i> 将全部设为已读</a></li>
