--- a/design/index.html
+++ b/design/index.html
@@ -64,6 +64,26 @@
 
     <div class="category-heading">Nearby Deadline</div>
     <ol class="message-list">
+      <li class="message">
+        <a class="title" target="_blank" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_detail.jsp?id=486643&amp;course_id=97913">
+          <span class="tag theme-red"><i class="icon-pencil"></i> 365</span>
+          <span class="tag theme-orange"><i class="icon-pencil"></i> 365</span>
+          <span class="tag theme-green"><i class="icon-pencil"></i> 365</span>
+          <span class="tag theme-yellow"><i class="icon-pencil"></i> 365</span>
+          <span class="tag theme-purple"><i class="icon-pencil"></i> 365</span>
+          <span class="tag theme-black"><i class="icon-pencil"></i> 365</span>
+          <span class="tag theme-white"><i class="icon-pencil"></i> 365</span>
+        </a>
+        
+        <span class="description">2013.03.08 - 已批阅</span>
+        <div class="toolbar">
+          <a class="handin-link" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_submit.jsp?id=486643&amp;course_id=97913">已经提交</a>
+          <a class="add-star" href="#">加星</a>
+          <a class="attachment-file" href="#"><i class="icon-paper-clip"></i>abcd.zipabcd.zipabcd.zipabcd.zipabcd.zipabcd.zip</a>
+          <a class="course-name" target="_blank" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_brw.jsp?course_id=97913">毛泽东思想和中国特色社会主义理论体系概论</a>
+        </div>
+      </li>
+
       <li class="message homework is-unread is-submitted is-reviewed is-stared is-important">
         <a class="title" target="_blank" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_detail.jsp?id=486643&amp;course_id=97913">
           <span class="tag"><i class="icon-pencil"></i> 365</span>
@@ -110,10 +130,10 @@
       closable: false
     });
     setTimeout(function() {
-      $('#my-modal').modal('show');
+      // $('#my-modal').modal('show');
     }, 1000)
     setInterval(function() {
-      $('body').toggleClass('is-loading');
+      // $('body').toggleClass('is-loading');
     }, 1000);
   </script>
 
