--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
 				<iframe src="welcome.html" name="content-frame" frameborder="0" width="100%" height="100%"></iframe>
 			</div>
 
-			<div id="my-modal">
+			<div id="token-modal">
 				<form class="form-styled">
 					<div class="field">
 						<input id="token-username" type="text" placeholder="用户名" />
@@ -61,7 +61,18 @@
 					</div>
 				</form>
 			</div>
-
+			<div id="msg-modal">
+				<div id="msg-text">
+					
+				</div>
+				<div class="field">
+					<input id="msg-ok" type="submit" class="btn" value="知道了" />
+				</div>
+			</div>
+			<div id="net-error-modal">
+				网络似乎出了一点小问题~你有两个选择：
+					<button id="net-error-reload-btn" class="btn">刷新页面 </button>
+					<button id="net-error-offline-btn" class="btn">离线使用 </button>
 		</body>
 	</html>
 
