--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
 			</div>
 
 			<div id="token-modal">
-				<form class="form-styled">
+				<form class="form-styled" id="token-form">
 					<div class="field">
 						<input id="token-username" type="text" placeholder="用户名" />
 					</div>
