--- a/design/index.html
+++ b/design/index.html
@@ -8,6 +8,7 @@
 <body>
   <div class="pane-folder">
     <ul class="folder-list">
+      <div class="loading"><i class="icon-refresh"></i></div>
       <li class="folder-heading">
         <i class="icon-inbox"></i> 本学期课程
       </li>
@@ -98,6 +99,8 @@
           <a class="course-name" target="_blank" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_brw.jsp?course_id=97913">毛泽东思想和中国特色社会主义理论体系概论</a>
         </div>
       </li>
+
+
     </ol>
 
   </div>
@@ -118,9 +121,11 @@
         <input type="submit" class="btn" value="登录" />
       </div>
     </form>
+    <input type="button" class="btn" value="登录" />
   </div>
 
   <script src="js/jquery-1.9.1.min.js"></script>
+  <script src="js/loading.js"></script>
   <script src="js/modal.js"></script>
   <script src="js/menu.js"></script>
 
@@ -132,9 +137,19 @@
     setTimeout(function() {
       // $('#my-modal').modal('show');
     }, 1000)
+    var x = -Math.random();
+    var y = -Math.random();
+    x= 0;
+    setLoading(-1, '.pane-message');
+    setLoading(-1, '.pane-folder');
     setInterval(function() {
-      // $('body').toggleClass('is-loading');
-    }, 1000);
+      setLoading(x, '.pane-message');
+      setLoading(y, '.pane-folder');
+      x += Math.random() * 0.2;
+      y += Math.random() * 0.2;
+      if (x > 1) x = -Math.random();
+      if (y > 1) y = -Math.random();
+    }, 500);
   </script>
 
 </body>
