--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 		<!-- <script src="libs/jquery-1.8.1.min.js"></script> -->
 		<script src="js/jquery-1.9.1.min.js"></script>
 		<script src="js/modal.js"></script>
+		<script src="js/loading.js"></script>
 		<script src="js/menu.js"></script>
 		<script src="ulti.js"></script>
 		<script language="javascript" type="text/javascript" src="total.js"> </script>
