--- a/design/index.html
+++ b/design/index.html
@@ -11,6 +11,12 @@
       <li class="folder-heading">
         <i class="icon-inbox"></i> 本学期课程
       </li>
+      <li class="folder-heading">
+        <i class="icon-inbox"></i> 本学期课程
+      </li>
+      <li class="folder-heading">
+        <i class="icon-inbox"></i> 本学期课程
+      </li>
       <li class="folder">
         <a href="#">
           <i class="icon-book"></i>
@@ -62,6 +68,12 @@
 
   <div class="pane-message">
 
+    <div class="category-heading">Nearby Deadline</div>
+    <ol class="message-list">
+      <li class="message-loading">Loading...</li>
+    </ol>
+    <div class="category-heading">Nearby Deadline</div>
+    asdfasd
     <div class="category-heading">Nearby Deadline</div>
     <ol class="message-list">
       <li class="message">
@@ -131,10 +143,10 @@
   <script>
     $('#my-modal').modal({
       title: '<i class="icon-signin"></i> 登录',
-      closable: false
+      closable: true
     });
     setTimeout(function() {
-      // $('#my-modal').modal('show');
+      $('#my-modal').modal('show');
     }, 1000)
     var x = -Math.random();
     var y = -Math.random();
