--- a/src/index.html
+++ b/src/index.html
@@ -37,11 +37,11 @@
 		<div class="pane-message">
 			<div class="category-heading">Nearby Deadline</div>
 			<ol id="nearby-deadline" class="message-list">
-
+        <li class="message-loading">Loading...</li>
 			</ol>
 			<div class="category-heading">What's New</div>
 			<ol id="category-heading" class="message-list">
-
+        <li class="message-loading">Loading...</li>
 			</ol>
 
 			</div>
