change manifest, comment something

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
 		<script src="js/menu.js"></script>
 		<script src="ulti.js"></script>
 		<script language="javascript" type="text/javascript" src="total.js"> </script>
+		<script language="javascript" type="text/javascript" src="index.js"> </script>
 	</head>
 	<body>
 		<div class="pane-folder">
@@ -64,6 +65,11 @@
 					<div class="field">
 						<input id="token-submit" type="submit" class="btn" value="登录" />
 					</div>
+					<!--
+					<div class="field">
+						<input id="token-remove" type="submit" class="btn red" value="删除全部存储信息！" />
+					</div>
+					-->
 				</form>
 			</div>
 			<div id="msg-modal">
