--- a/design/index.html
+++ b/design/index.html
@@ -19,7 +19,7 @@
       </li>
       <li class="folder">
         <a href="#">
-          <i class="icon-book"></i>
+          <i class="icon-bullhorn"></i>
           计算机系统结构
           <span class="unread-count">6</span>
         </a>
