--- a/src/index.html
+++ b/src/index.html
@@ -31,13 +31,13 @@
         </li>
         <li class="folder">
           <a href="#">
-            <i class="icon-bell-alt"></i> 所有通知
+            <i class="icon-bullhorn"></i> 所有通知
             <span class="unread-count">6</span>
           </a>
         </li>
         <li class="folder">
           <a href="#">
-            <i class="icon-folder-open"></i> 所有作业
+            <i class="icon-pencil"></i> 所有作业
             <span class="unread-count">6</span>
           </a>
         </li>
