--- a/src/index.html
+++ b/src/index.html
@@ -70,21 +70,21 @@
 
 		<div class="pane-message">
 			<div id="main-page">
-				<div class="category-heading">What's New</div>
+				<div class="category-heading">新鲜事</div>
 				<ol id="js-new" class="message-list">
 					<li class="message-loading">Loading...</li>
 				</ol>
 			</div>
 
 			<div id="deadline-page">
-				<div class="category-heading">Nearby Deadline</div>
+				<div class="category-heading">全部作业</div>
 				<ol id="nearby-deadline" class="message-list">
 					<li class="message-loading">Loading...</li>
 				</ol>
 			</div>
 
 			<div id="notification-page">
-				<div class="category-heading">Notification</div>
+				<div class="category-heading">全部通知</div>
 				<ol id="category-heading" class="message-list">
 					<li class="message-loading">Loading...</li>
 				</ol>
@@ -97,6 +97,7 @@
 
 			<div id="token-modal">
 				<form class="form-styled" id="token-form">
+					请使用登陆网络学堂时的用户名和密码登陆
 					<div class="field">
 						<input id="token-username" type="text" placeholder="用户名" />
 					</div>
