--- a/src/welcome.html
+++ b/src/welcome.html
@@ -11,7 +11,7 @@
 		</div>
 		<div id="menu">
 			<li><a href="readme.html">使用手册</a></li>
-			<li><a href="#">关于我们</a></li>
+			<li><a href="about.html#about-us">关于我们</a></li>
 		</div>
 		<div id="footer">
 			&copy; 2012 <a href="mailto:xxr3376@gmail.com">UGeeker</a> BrainLi
